Use the version of projectreactor from micronaut-reactor
Instead of having to keep it aligned

Closes #7638

--- a/function-client/build.gradle
+++ b/function-client/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     api project(":function")
     api project(":http-client")
 
-    implementation libs.managed.reactor
+    implementation(platform(libs.boms.micronaut.reactor))
+    implementation libs.project.reactor
 }
