--- a/http-client-core/build.gradle
+++ b/http-client-core/build.gradle
@@ -5,7 +5,8 @@ plugins {
 dependencies {
     annotationProcessor project(":inject-java")
 
-    implementation libs.managed.reactor
+    implementation(platform(libs.boms.micronaut.reactor))
+    implementation libs.project.reactor
 
     api project(":runtime")
 
