--- a/validation/build.gradle
+++ b/validation/build.gradle
@@ -18,7 +18,8 @@ dependencies {
     compileOnly libs.managed.gorm
     compileOnly project(":http-server")
 
-    implementation libs.managed.reactor
+    implementation(platform(libs.boms.micronaut.reactor))
+    implementation libs.project.reactor
 
     testImplementation libs.managed.spotbugs
     testAnnotationProcessor project(":inject-java")
