--- a/websocket/build.gradle
+++ b/websocket/build.gradle
@@ -12,7 +12,8 @@ dependencies {
     api project(":inject")
     api project(':aop')
 
-    implementation libs.managed.reactor
+    implementation(platform(libs.boms.micronaut.reactor))
+    implementation libs.project.reactor
 
     testImplementation project(":inject-groovy")
 }
