--- a/http-netty/build.gradle
+++ b/http-netty/build.gradle
@@ -17,7 +17,8 @@ dependencies {
     api libs.managed.netty.codec.http2
     api libs.managed.netty.handler
 
-    implementation libs.managed.reactor
+    implementation(platform(libs.boms.micronaut.reactor))
+    implementation libs.project.reactor
 
     testImplementation project(":runtime")
 }
