--- a/session/build.gradle
+++ b/session/build.gradle
@@ -10,7 +10,8 @@ dependencies {
     compileOnly project(":http-server")
     compileOnly project(":http-server-netty")
 
-    implementation libs.managed.reactor
+    implementation(platform(libs.boms.micronaut.reactor))
+    implementation libs.project.reactor
 
     testAnnotationProcessor project(":inject-java")
     testCompileOnly project(":inject-groovy")
