--- a/test-suite-groovy/build.gradle
+++ b/test-suite-groovy/build.gradle
@@ -29,7 +29,8 @@ dependencies {
     testRuntimeOnly(platform(libs.boms.micronaut.aws))
     testRuntimeOnly libs.aws.java.sdk.lambda
 
-    testImplementation libs.managed.reactor
+    testImplementation(platform(libs.boms.micronaut.reactor))
+    testImplementation libs.project.reactor
 }
 
 //tasks.withType(Test).configureEach {
