--- a/test-suite-kotlin/build.gradle
+++ b/test-suite-kotlin/build.gradle
@@ -64,7 +64,8 @@ dependencies {
         testImplementation libs.bcpkix
     }
 
-    testImplementation libs.managed.reactor
+    testImplementation(platform(libs.boms.micronaut.reactor))
+    testImplementation libs.project.reactor
 }
 
 tasks.named("compileTestKotlin") {
