Workaround for Netty MixedFileUpload bug This is a fix for https://github.com/netty/netty/issues/12627 . This patch changes MixedFileUpload to use its own reference count independent of the underlying storage (memory or file), so that the ref count isn't lost when switching storage mode. I copied the DefaultHttpDataFactory and MixedFileUpload from netty to apply this change.
We can revert this change once a netty fix is available (though we should keep the test).

Fixes #7699

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,7 +44,7 @@ managed-google-function-invoker = "1.0.0"
 managed-gorm = "7.3.1"
 managed-gorm-hibernate = "7.2.2"
 # be sure to update graal version in gradle.properties as well
-# Intentionally pin to 22.0.0.2 see https://github.com/micronaut-projects/micronaut-kafka/pull/564 and https://github.com/micronaut-projects/micronaut-core/pull/7663 
+# Intentionally pin to 22.0.0.2 see https://github.com/micronaut-projects/micronaut-kafka/pull/564 and https://github.com/micronaut-projects/micronaut-core/pull/7663
 managed-graal-sdk = "22.0.0.2"
 managed-graal = "22.1.0"
 managed-graal-svm = "22.0.0.2"
@@ -429,6 +429,7 @@ testcontainers-spock = { module = "org.testcontainers:spock", version.ref = "man
 vertx = { module = "io.vertx:vertx-core", version.ref = "vertx" }
 vertx-webclient = { module = "io.vertx:vertx-web-client", version.ref = "vertx" }
 httpcomponents-client = { module = "org.apache.httpcomponents:httpclient", version.ref = "httpcomponents-client" }
+httpcomponents-mime = { module = "org.apache.httpcomponents:httpmime", version.ref = "httpcomponents-client" }
 
 wiremock = { module = "com.github.tomakehurst:wiremock-jre8", version.ref = "wiremock" }
 
