--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ asm = "9.2"
 awaitility = "4.2.0"
 bcpkix = "1.70"
 blaze = "1.6.6"
-caffeine = ""
+caffeine = "2.9.3"
 compile-testing = "0.19"
 geb = "3.4.1"
 hibernate = "5.5.9.Final"
