--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -92,14 +92,16 @@ managed-micronaut-kubernetes = "3.4.0"
 managed-micronaut-micrometer = "4.4.0"
 managed-micronaut-microstream = "1.0.0"
 managed-micronaut-liquibase = "5.4.1"
-managed-micronaut-mongo = "4.3.0"
+managed-micronaut-mongodb = "4.3.0"
+managed-micronaut-mongo = "4.3.0" # delete in Micronaut 4
 managed-micronaut-mqtt = "2.2.0"
 managed-micronaut-multitenancy = "4.1.0"
 managed-micronaut-neo4j = "5.1.0"
 managed-micronaut-nats = "3.1.0"
 managed-micronaut-netflix = "2.1.0"
 managed-micronaut-openapi = "4.4.3"
-managed-micronaut-oraclecloud = "2.1.5"
+managed-micronaut-oraclecloud = "2.1.5" # delete in Micronaut 4
+managed-micronaut-oracle-cloud = "2.1.5"
 managed-micronaut-picocli = "4.3.0"
 managed-micronaut-problem = "2.4.0"
 managed-micronaut-rabbitmq = "3.3.0"
@@ -121,7 +123,8 @@ managed-micronaut-toml = "1.1.1"
 managed-micronaut-tracing = "4.2.1"
 managed-micronaut-tracing-legacy = "3.2.7"
 managed-micronaut-views = "3.5.0"
-managed-micronaut-xml = "3.1.0"
+managed-micronaut-jackson-xml = "3.1.0"
+managed-micronaut-xml = "3.1.0" # delete in Micronaut 4
 managed-neo4j = "3.5.34"
 managed-neo4j-java-driver = "4.4.9"
 managed-netty = "4.1.79.Final"
@@ -160,9 +163,9 @@ boms-micronaut-kubernetes = { module = "io.micronaut.kubernetes:micronaut-kubern
 boms-micronaut-liquibase = { module = "io.micronaut.liquibase:micronaut-liquibase-bom", version.ref = "managed-micronaut-liquibase" }
 boms-micronaut-micrometer = { module = "io.micronaut.micrometer:micronaut-micrometer-bom", version.ref = "managed-micronaut-micrometer" }
 boms-micronaut-microstream = { module = "io.micronaut.microstream:micronaut-microstream-bom", version.ref = "managed-micronaut-microstream" }
-boms-micronaut-mongo = { module = "io.micronaut.mongodb:micronaut-mongo-bom", version.ref = "managed-micronaut-mongo" }
+boms-micronaut-mongo = { module = "io.micronaut.mongodb:micronaut-mongo-bom", version.ref = "managed-micronaut-mongodb" }
 boms-micronaut-mqtt = { module = "io.micronaut.mqtt:micronaut-mqtt-bom", version.ref = "managed-micronaut-mqtt" }
-boms-micronaut-oraclecloud = { module = "io.micronaut.oraclecloud:micronaut-oraclecloud-bom", version.ref = "managed-micronaut-oraclecloud" }
+boms-micronaut-oraclecloud = { module = "io.micronaut.oraclecloud:micronaut-oraclecloud-bom", version.ref = "managed-micronaut-oracle-cloud" }
 boms-micronaut-openapi = { module = "io.micronaut.openapi:micronaut-openapi-bom", version.ref = "managed-micronaut-openapi" }
 boms-micronaut-picocli = { module = "io.micronaut.picocli:micronaut-picocli-bom", version.ref = "managed-micronaut-picocli" }
 boms-micronaut-problem-json = { module = "io.micronaut.problem:micronaut-problem-json-bom", version.ref = "managed-micronaut-problem" }
@@ -314,7 +317,7 @@ managed-micronaut-test-kotest = { module = "io.micronaut.test:micronaut-test-kot
 managed-micronaut-test-spock = { module = "io.micronaut.test:micronaut-test-spock", version.ref = "managed-micronaut-test" }
 managed-micronaut-toml = { module = "io.micronaut.toml:micronaut-toml", version.ref = "managed-micronaut-toml" }
 managed-micronaut-tracing-legacy = { module = "io.micronaut:micronaut-tracing", version.ref = "managed-micronaut-tracing-legacy" }
-managed-micronaut-xml = { module = "io.micronaut.xml:micronaut-jackson-xml", version.ref = "managed-micronaut-xml" }
+managed-micronaut-xml = { module = "io.micronaut.xml:micronaut-jackson-xml", version.ref = "managed-micronaut-jackson-xml" }
 
 managed-reactive-pg-client = { module = "io.reactiverse:reactive-pg-client", version.ref = "managed-reactive-pg-client" }
 managed-reactive-streams = { module = "org.reactivestreams:reactive-streams", version.ref = "managed-reactive-streams" }
