--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-projectVersion=3.7.0-SNAPSHOT
+projectVersion=3.7.0-REF
 projectGroupId=io.micronaut
 title=Micronaut
 projectDesc=Natively Cloud Native
