--- a/gradle.properties
+++ b/gradle.properties
@@ -29,11 +29,13 @@ jeeapi=https://docs.oracle.com/javaee/6/api
 jakartaapi=https://jakarta.ee/specifications/platform/9/apidocs
 kafkaapi=https://kafka.apache.org/11/javadoc
 micronautdiscoveryapi=https://micronaut-projects.github.io/micronaut-discovery-client/latest/api
+micronautgroovyapi=https://micronaut-projects.github.io/micronaut-groovy/latest/api
 micronauthystrixapi=https://micronaut-projects.github.io/micronaut-netflix/latest/api
 micronautribbonapi=https://micronaut-projects.github.io/micronaut-netflix/latest/api
 micronautcacheapi=https://micronaut-projects.github.io/micronaut-cache/latest/api
 micronautreactorapi=https://micronaut-projects.github.io/micronaut-reactor/latest/api
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
+micronauttracingapi=https://micronaut-projects.github.io/micronaut-tracing/latest/api
 hibernateapi=http://docs.jboss.org/hibernate/orm/current/javadocs
 rsapi=http://www.reactive-streams.org/reactive-streams-1.0.3-javadoc
 projectUrl=https://micronaut.io
