--- a/test-suite-groovy/build.gradle
+++ b/test-suite-groovy/build.gradle
@@ -28,12 +28,9 @@ dependencies {
     testImplementation project(":function-web")
     testRuntimeOnly(platform(libs.boms.micronaut.aws))
     testRuntimeOnly libs.aws.java.sdk.lambda
+    testRuntimeOnly libs.bcpkix
 
     testImplementation libs.managed.reactor
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs("--add-opens", "java.base/sun.security.x509=ALL-UNNAMED")
 }
 
 //compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
