--- a/inject-kotlin-test/build.gradle
+++ b/inject-kotlin-test/build.gradle
@@ -45,16 +45,18 @@ tasks.named("compileGroovy") {
 }
 
 tasks.named("test", Test) {
-    jvmArgs(
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
-    )
+    if(JavaVersion.current().majorVersion.toInteger() >= 17) {
+        jvmArgs(
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
+        )
+    }
 }
