--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -315,6 +315,7 @@ managed-micronaut-test-bom = { module = "io.micronaut.test:micronaut-test-bom", 
 managed-micronaut-test-core = { module = "io.micronaut.test:micronaut-test-core", version.ref = "managed-micronaut-test" }
 managed-micronaut-test-junit5 = { module = "io.micronaut.test:micronaut-test-junit5", version.ref = "managed-micronaut-test" }
 managed-micronaut-test-kotest = { module = "io.micronaut.test:micronaut-test-kotest", version.ref = "managed-micronaut-test" }
+managed-micronaut-test-kotest5 = { module = "io.micronaut.test:micronaut-test-kotest5", version.ref = "managed-micronaut-test" }
 managed-micronaut-test-spock = { module = "io.micronaut.test:micronaut-test-spock", version.ref = "managed-micronaut-test" }
 managed-micronaut-toml = { module = "io.micronaut.toml:micronaut-toml", version.ref = "managed-micronaut-toml" }
 managed-micronaut-tracing-legacy = { module = "io.micronaut:micronaut-tracing", version.ref = "managed-micronaut-tracing-legacy" }
