--- a/test-suite-kotlin/build.gradle
+++ b/test-suite-kotlin/build.gradle
@@ -8,7 +8,7 @@ micronautBuild {
     core {
         usesMicronautTestJunit()
         usesMicronautTestSpock()
-        usesMicronautTestKotest5()
+        usesMicronautTestKotest()
     }
 }
 
