--- a/core-reactive/build.gradle
+++ b/core-reactive/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "io.micronaut.build.internal.convention-library"
+    id "org.jetbrains.kotlin.jvm"
 }
 
 dependencies {
@@ -7,4 +8,12 @@ dependencies {
     api libs.managed.reactive.streams
 
     compileOnly libs.managed.reactor
+    compileOnly libs.managed.kotlinx.coroutines.core
+}
+
+tasks.named("compileKotlin") {
+    kotlinOptions {
+        jvmTarget = 17
+        languageVersion = "1.7"
+    }
 }
